# litter

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUTHORS.md  BUILD_STATUS.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEBUG_LOG.md  LICENSE  Makefile  Package.swift  README.md  TASKS.md  THIRD_PARTY_NOTICES.md  litter-altstore-source.json  litter-update.json
.github/workflows/: android-apk-release.yml  android-play-release.yml  build-unsigned-ios-ipa.yml  buildkit-assets.yml  export-ios-rust-generated.yml  ios-app-store-release.yml  ios-testflight.yml  ios-unsigned-ipa.yml  mac-direct-dist.yml  mac-testflight.yml  mobile-ci.yml  mobile-release.yml
apps/: README.md
apps/ios/: README.md  project.yml
docs/: DEVELOPMENT.md  kittystore-pairing-file.md
docs/architecture/: nyxian-buildkit-audit.md
patches/codex/: README.md  dynamic-tool-call-arguments-delta.patch  ios-exec-hook.patch  mobile-apply-patch-ish-fakefs.patch  mobile-code-mode-stub.patch  mobile-shell-snapshot-timeout.patch  realtime-webrtc-env-apikey.patch  remote-app-server-websocket-cap.patch
patches/ghostty/: litter-mobile-embed.patch
services/connector-relay/: .env.example  README.md  package.json  vercel.json
services/push-proxy/: package.json
services/testflight-signup/: package-lock.json  package.json
shared/: README.md
shared/protocol/: README.md
shared/rust-bridge/: Cargo.toml  generate-bindings.sh
shared/rust-bridge/codex-bridge/: Cargo.toml
shared/rust-bridge/codex-bridge/src/: lib.rs
tools/assets/: kittystore-source-icon.heic
tools/ci/: README.md
(+217 files in other folders)
